--- a/MyApp_AR/static/reactIntegrationDemo/package.json
+++ b/MyApp_AR/static/reactIntegrationDemo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jeeliz_vto_widget_integration_demo",
   "version": "1.0.0",
-  "description": "Webpack 4 boilerplate using Babel and PostCSS with HMR development server and optimized production build for ARGenius.",
+  "description": "Webpack 4 boilerplate using Babel and PostCSS with HMR development server and optimized production build for Jeeliz VTO widget.",
   "main": "index.js",
   "author": "Xavier Bourry",
   "license": "APACHE2",
