--- a/MyApp_AR/static/reactViteIntegrationDemo/package.json
+++ b/MyApp_AR/static/reactViteIntegrationDemo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jeeliz-vto-widget-vite-integration-demo",
+  "name": "ARLook-widget-vite-integration-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ARGenius": "^4.6.4",
+    "arlookwidget": "^4.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
